This file describes changes in the IO package.

X.Y.Z (YYYY-MM-DD)
  - Change minimal required GAP version to 4.11

4.7.3 (2022-09-25)
  - Fix a build issue where running `make clean` would break the build
    system (and hence building this package via GAP's BuildPackages.sh
    script was broken, as that always runs `make clean` first)
  - Various janitorial changes

4.7.2 (2021-10-21)
  - Change `Random( RandomSource( IsRealRandomSource, "random" ), 1, 1 )` from `fail` to `1`.
  - Improve `IO_CallWithTimeout` documentation

4.7.1 (2021-04-11)
  - Add IO_realpath
  - Handle crashing GAP in IO_CallWithTimeout
  - Fix unpickling of permutation groups with no generators
  - Switch to a new build system
  - Various janitorial changes

4.7.0 (2019-07-17)
  - Add IO_CallWithTimeout
  - Remove CheckForUpdates, it was hopelessly broken
  - Make IO_stat/IO_lstat/IO_fstat compatible with large files
  - Various janitorial changes

4.6.0 (2019-03-15)
  - Change minimal required GAP version to 4.10
  - Fix for profiling when IO_fork is called
  - Add License field to PackageInfo.g
  - Fix various (harmless) compiler warnings
  - Various internal changes to better work with newer (and future) GAP versions
    (avoid including src/iostream.h, avoid C_NEW_STRING, modernize build system)

4.5.4 (2018-09-19)
  - Add IO_getcwd to query the current working directory
  - Fix ChangeDirectoryCurrent when used with relative paths
    (it used to set GAPInfo.DirectoryCurrent to an invalid value)

4.5.3 (2018-09-18)
  - Minimal GAP version is 4.9 (it already effectively was in 4.5.2, but PackageInfo.g
    had not been updated)

4.5.2 (2018-08-21)
  - Add exit status to IO_WaitPid (contributed by Chris Jefferson, PR #64)
  - Make IO usable in the HPC-GAP threads (contributed by Mohamed Barakat, PR #65)
  - Fix a failure in the HTTP part of the test suite
  - Replace the deprecated `Elements` in examples by `AsSet`
  - Clarify IO_WaitPid documentation