@@ -2,6 +2,7 @@ This file describes changes in the IO package.
 
 X.Y.Z (YYYY-MM-DD)
   - Change minimal required GAP version to 4.11
+  - Add IO_getenv, IO_setenv, IO_unsetenv
 
 4.7.3 (2022-09-25)
   - Fix a build issue where running `make clean` would break the build
